SERVER-13764 update system retrieves nscanned / nscannedObjects from plan executor