src/mongo/db/ops/update.cpp
@@ -43,7 +43,8 @@
 #include "mongo/db/ops/update_driver.h"
 #include "mongo/db/ops/update_executor.h"
 #include "mongo/db/ops/update_lifecycle.h"
-#include "mongo/db/query/get_runner.h"
+#include "mongo/db/query/explain.h"
+#include "mongo/db/query/get_executor.h"
 #include "mongo/db/query/lite_parsed_query.h"
 #include "mongo/db/query/query_planner_common.h"
 #include "mongo/db/repl/repl_coordinator_global.h"
@@ -455,19 +456,20 @@ namespace mongo {
             driver->refreshIndexKeys(lifecycle->getIndexKeys());
         }
 
-        Runner* rawRunner;
+        PlanExecutor* rawExec;
         Status status = cq ?
-            getRunner(txn, collection, cqHolder.release(), &rawRunner) :
-            getRunner(txn, collection, nsString.ns(), request.getQuery(), &rawRunner, &cq);
+            getExecutor(txn, collection, cqHolder.release(), &rawExec) :
+            getExecutor(txn, collection, nsString.ns(), request.getQuery(), &rawExec);
         uassert(17243,
-                "could not get runner " + request.getQuery().toString() + "; " + causedBy(status),
+                "could not get executor" + request.getQuery().toString() + "; " + causedBy(status),
                 status.isOK());
 
-        // Create the runner and setup all deps.
-        auto_ptr<Runner> runner(rawRunner);
+        // Create the plan executor and setup all deps.
+        auto_ptr<PlanExecutor> exec(rawExec);
 
-        // Register Runner with ClientCursor
-        const ScopedRunnerRegistration safety(runner.get());
+        // Get the canonical query which the underlying executor is using. This may be NULL in
+        // the case of idhack updates.
+        cq = exec->getCanonicalQuery();
 
         //
         // We'll start assuming we have one or more documents for this update. (Otherwise,
@@ -498,9 +500,12 @@ namespace mongo {
         // update if we throw a page fault exception below, and we rely on these counters
         // reflecting only the actions taken locally. In particlar, we must have the no-op
         // counter reset so that we can meaningfully comapre it with numMatched above.
-        opDebug->nscanned = 0;
-        opDebug->nscannedObjects = 0;
         opDebug->nModified = 0;
+
+        // -1 for these fields means that we don't have a value. Once the update completes
+        // we request these values from the plan executor.
+        opDebug->nscanned = -1;
+        opDebug->nscannedObjects = -1;
 
         // Get the cached document from the update driver.
         mutablebson::Document& doc = driver->getDocument();
@@ -521,7 +526,7 @@ namespace mongo {
         while (true) {
             // Get next doc, and location
             DiskLoc loc;
-            state = runner->getNext(&oldObj, &loc);
+            state = exec->getNext(&oldObj, &loc);
 
             if (state != Runner::RUNNER_ADVANCED) {
                 if (state == Runner::RUNNER_EOF) {
@@ -540,14 +545,6 @@ namespace mongo {
                 continue;
             }
 
-            // We count how many documents we scanned even though we may skip those that are
-            // deemed duplicated. The final 'numMatched' and 'nscanned' numbers may differ for
-            // that reason.
-            // TODO: Do we want to pull this out of the underlying query plan?
-            opDebug->nscanned++;
-
-            // Found a matching document
-            opDebug->nscannedObjects++;
             numMatched++;
 
             // Ask the driver to apply the mods. It may be that the driver can apply those "in
@@ -624,7 +621,7 @@ namespace mongo {
             }
 
             // Save state before making changes
-            runner->saveState();
+            exec->saveState();
 
             if (inPlace && !driver->modsAffectIndices()) {
                 // If a set of modifiers were all no-ops, we are still 'in place', but there is
@@ -670,8 +667,8 @@ namespace mongo {
 
             // Restore state after modification
             uassert(17278,
-                    "Update could not restore runner state after updating a document.",
-                    runner->restoreState(txn));
+                    "Update could not restore plan executor state after updating a document.",
+                    exec->restoreState());
 
             // Call logOp if requested.
             if (request.shouldCallLogOp() && !logObj.isEmpty()) {
@@ -691,6 +688,12 @@ namespace mongo {
             // Opportunity for journaling to write during the update.
             txn->recoveryUnit()->commitIfNeeded();
         }
+
+        // Get summary information about the plan.
+        PlanSummaryStats stats;
+        Explain::getSummaryStats(exec.get(), &stats);
+        opDebug->nscanned = stats.totalKeysExamined;
+        opDebug->nscannedObjects = stats.totalDocsExamined;
 
         // TODO: Can this be simplified?
         if ((numMatched > 0) || (numMatched == 0 && !request.isUpsert()) ) {
